--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.14.3'
     implementation 'org.json:json:20220320'
 
+    implementation group: 'org.glassfish.tyrus.bundles', name: 'tyrus-standalone-client', version: '2.0.2'
 }
 
 build.dependsOn shadowJar
