--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id "com.github.johnrengelman.shadow" version "7.1.2"
+    id "me.champeau.jmh" version "0.6.6"
 }
 
 group 'me.koutachan.nicoutils'
@@ -15,11 +15,19 @@ repositories {
     }
 }
 
+jmh {
+    jmhVersion = '1.34'
+
+    fork = 1
+}
+
+
 dependencies {
     implementation 'org.jsoup:jsoup:1.14.3'
     implementation 'org.json:json:20220320'
 
     implementation group: 'org.glassfish.tyrus.bundles', name: 'tyrus-standalone-client', version: '2.0.2'
-}
 
-build.dependsOn shadowJar
+    implementation group: 'org.openjdk.jmh', name: 'jmh-generator-annprocess', version: '1.34'
+    implementation group: 'org.openjdk.jmh', name: 'jmh-core', version: '1.34'
+}
